manifests/it-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  labels:
    app: it-tools
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: it-tools
